[gd_scene load_steps=13 format=2]

[ext_resource path="res://minigames/banana_munch/assets/art/banana.png" type="Texture" id=1]
[ext_resource path="res://minigames/banana_munch/assets/art/eating_paticle.png" type="Texture" id=2]
[ext_resource path="res://minigames/banana_munch/entities/Banana.gd" type="Script" id=3]

[sub_resource type="ParticlesMaterial" id=8]
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
direction = Vector3( -1, -1, 0 )
spread = 50.0
flatness = 1.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 90.0
initial_velocity_random = 0.37
orbit_velocity = 0.0
orbit_velocity_random = 0.0

[sub_resource type="Animation" id=9]
resource_name = "shake"
length = 0.15
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BananaSprite:position")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1, 1 ), Vector2( 1, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 0, 715, 132, 143 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 0, 572, 132, 143 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 429, 132, 143 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 286, 132, 143 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 0, 143, 132, 143 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 132, 143 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Banana" type="Node2D"]
script = ExtResource( 3 )

[node name="SecondEatingParticle" type="Particles2D" parent="."]
position = Vector2( 3.03611, 18.651 )
emitting = false
amount = 20
lifetime = 4.0
one_shot = true
speed_scale = 2.5
explosiveness = 1.0
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="FirstEatingParticle" type="Particles2D" parent="."]
position = Vector2( 3.37097, -19.2788 )
emitting = false
amount = 20
lifetime = 4.0
one_shot = true
speed_scale = 2.5
explosiveness = 1.0
process_material = SubResource( 8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/shake = SubResource( 9 )

[node name="BananaSprite" type="AnimatedSprite" parent="."]
position = Vector2( 1, 0 )
frames = SubResource( 16 )
